test/libhyperion/syntaxTests/immutable/state_var_external_access_read.hyp
contract C {
    uint immutable public x = 42;

    function g() external view returns (uint) {}

    function f() public view returns (uint) {
        return this.x();
    }

    function h() public view returns (function () external view returns (uint)) {
        return this.x;
    }
}
// ----
// TypeError 4889: (214-255): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
